--- a/build.gradle
+++ b/build.gradle
@@ -1,56 +1,3 @@
-//plugins {
-//    id 'java'
-//    id 'org.springframework.boot' version '3.1.7'
-//    id 'io.spring.dependency-management' version '1.1.4'
-//}
-//
-//group = 'com.eum.assignment'
-//version = '0.0.1-SNAPSHOT'
-//
-//java {
-//    sourceCompatibility = '17'
-//}
-//
-//configurations {
-//    compileOnly {
-//        extendsFrom annotationProcessor
-//    }
-//}
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-//    compileOnly 'org.projectlombok:lombok'
-//    annotationProcessor 'org.projectlombok:lombok'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//}
-//
-//tasks.named('bootBuildImage') {
-//    builder = 'paketobuildpacks/builder-jammy-base:latest'
-//}
-//
-//tasks.named('test') {
-//    useJUnitPlatform()
-//}
-//
-//
-//
-//
-//
-////project(':msa-service-coffee-order') {
-////    bootJar { enabled = false }
-////    jar { enabled = true }
-////
-////    dependencies {
-////    }
-////}
-
-
-
 buildscript {
     ext {
         springBootVersion = '3.1.7'
@@ -85,11 +32,6 @@ subprojects {
 
     // 하위 모듈에서 공통으로 사용하는 세팅 추가
     dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-//    compileOnly 'org.projectlombok:lombok'
-//    annotationProcessor 'org.projectlombok:lombok'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 
     test {
@@ -102,7 +44,7 @@ project(':msa-service-coffee-order') {
     bootJar { enabled = false }
     jar { enabled = true }
     ext {
-        set('springCloudVersion', "2021.0.4")
+        set('springCloudVersion', "2022.0.0")
     }
     dependencies {
         compileOnly 'org.projectlombok:lombok'
@@ -122,6 +64,7 @@ project(':msa-service-coffee-order') {
         // Zipkin 분산 트레이싱
         implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-zipkin', version: '2.2.8.RELEASE'
         implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config', version: '4.0.4'
+        implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.1'
         implementation 'com.mysql:mysql-connector-j'
 
     }
@@ -136,7 +79,7 @@ project(':msa-service-coffee-status') {
     bootJar { enabled = false }
     jar { enabled = true }
     ext {
-        set('springCloudVersion', "2021.0.4")
+        set('springCloudVersion', "2022.0.0")
     }
     dependencies {
         compileOnly 'org.projectlombok:lombok'
@@ -169,7 +112,7 @@ project(':msa-service-coffee-member') {
     bootJar { enabled = false }
     jar { enabled = true }
     ext {
-        set('springCloudVersion', "2021.0.4")
+        set('springCloudVersion', "2022.0.0")
     }
     dependencies {
         compileOnly 'org.projectlombok:lombok'
