--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ project(':msa-service-coffee-order') {
     bootJar { enabled = false }
     jar { enabled = true }
     ext {
-        set('springCloudVersion', "2022.0.0")
+        set('springCloudVersion', "2022.0.3")
     }
     dependencies {
         compileOnly 'org.projectlombok:lombok'
@@ -79,7 +79,7 @@ project(':msa-service-coffee-status') {
     bootJar { enabled = false }
     jar { enabled = true }
     ext {
-        set('springCloudVersion', "2022.0.0")
+        set('springCloudVersion', "2022.0.3")
     }
     dependencies {
         compileOnly 'org.projectlombok:lombok'
@@ -112,7 +112,7 @@ project(':msa-service-coffee-member') {
     bootJar { enabled = false }
     jar { enabled = true }
     ext {
-        set('springCloudVersion', "2022.0.0")
+        set('springCloudVersion', "2022.0.3")
     }
     dependencies {
         compileOnly 'org.projectlombok:lombok'
@@ -133,6 +133,23 @@ project(':msa-service-coffee-member') {
         // Zipkin 분산 트레이싱
         implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-zipkin', version: '2.2.8.RELEASE'
         implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config', version: '4.0.4'
+    }
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        }
+    }
+}
+
+project(':msa-config') {
+    bootJar { enabled = false }
+    jar { enabled = true }
+    ext {
+        set('springCloudVersion', "2022.0.3")
+    }
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-actuator'
+        implementation 'org.springframework.cloud:spring-cloud-config-server'
     }
     dependencyManagement {
         imports {
