:heavy_plus_sign: 테스트 디펜던시 추가

--- a/build.gradle
+++ b/build.gradle
@@ -149,6 +149,7 @@ project(':msa-config') {
     }
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-actuator'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
         implementation 'org.springframework.cloud:spring-cloud-config-server'
     }
     dependencyManagement {
