--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'msa-book'
 include 'msa-service-coffee-status'
 include 'msa-service-coffee-order'
 include 'msa-service-coffee-member'
+include 'msa-config'
