--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ project(':msa-service-coffee-order') {
         implementation 'org.springframework.kafka:spring-kafka'
         implementation 'org.springframework.boot:spring-boot-starter-actuator'
         // Eureka 서비스 디스커버리
-        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
         // Ribbon 로드 밸런싱
         implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-ribbon', version: '2.2.6.RELEASE'
         // Hystrix 회로 차단기
@@ -89,10 +89,10 @@ project(':msa-service-coffee-status') {
         implementation 'org.springframework.boot:spring-boot-starter-jdbc'
         implementation 'org.springframework.kafka:spring-kafka'
         runtimeOnly 'com.mysql:mysql-connector-j'
-        implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.3'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-actuator'
         // Eureka 서비스 디스커버리
-        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
         // Ribbon 로드 밸런싱
         implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-ribbon', version: '2.2.6.RELEASE'
         // Hystrix 회로 차단기
@@ -122,10 +122,10 @@ project(':msa-service-coffee-member') {
         implementation 'org.springframework.boot:spring-boot-starter-jdbc'
         implementation 'org.springframework.kafka:spring-kafka'
         runtimeOnly 'com.mysql:mysql-connector-j'
-        implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.3'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-actuator'
         // Eureka 서비스 디스커버리
-        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
         // Ribbon 로드 밸런싱
         implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-ribbon', version: '2.2.6.RELEASE'
         // Hystrix 회로 차단기
@@ -158,3 +158,22 @@ project(':msa-config') {
         }
     }
 }
+project(':msa-eureka') {
+    bootJar { enabled = false }
+    jar { enabled = true }
+    ext {
+        set('springCloudVersion', "2022.0.3")
+    }
+    dependencies {
+        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        }
+    }
+}
+
