:sparkles: 유레카 서버 모듈 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include 'msa-service-coffee-status'
 include 'msa-service-coffee-order'
 include 'msa-service-coffee-member'
 include 'msa-config'
+include 'msa-eureka'
